// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawPowersAndAttacks() should return 1 power or attack card 1`] = `
Array [
  Object {
    "id": "card4",
  },
]
`;

exports[`drawPowersAndAttacks() should return 3 power or attack cards 1`] = `
Array [
  Object {
    "id": "card4",
  },
  Object {
    "id": "card2",
  },
  Object {
    "id": "card3",
  },
]
`;
